# demo-AI-Workshop

./: .gitpod.yml  README.md
workshops/GitHub_Copilot_advanced_workshop/: README.md  gilded_rose.py  pyproject.toml  test_gilded_rose.py
workshops/GitHub_Copilot_beginner_workshop/: password_generator.py  pyproject.toml
workshops/MCP_workshop/: README.md  bootstrap.sh  main.py  pyproject.toml
workshops/Prompt_engineering_workshop/: exercise1.md  exercise2.md
workshops/RAG_workshop/: README.md  main.py  pyproject.toml  rag_in_mcp.py  word_embedding.ipynb
workshops/RAG_workshop/.devcontainer/: devcontainer.json
workshops/RAG_workshop/chroma_db/: chroma.sqlite3
workshops/RAG_workshop/models/: word2vec_model
workshops/RAG_workshop/my_documents/: example_notes.txt
